--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
 <!-- //navigation -->
 	<!-- main-slider -->
-		<ul id="demo1">
+	<!--	<ul id="demo1">
 			<li>
 				<img src="images/11.jpg" alt="" />
-				<!--Slider Description example-->
+				Slider Description example
 				<div class="slide-desc">
 					<h3>Buy Rice Products Are Now On Line With Us</h3>
 				</div>
@@ -225,6 +225,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</li>
 		</ul>
+                         -->
 	<!-- //main-slider -->
 	<!-- //top-header and slider -->
 	<!-- top-brands -->
