--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Super Market an Ecommerce Online Shopping | Home :: w3layouts</title>
+<title>Super Market an Ecommerce Online Shopping</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -1150,9 +1150,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>Contact</h3>
 					
 					<ul class="address">
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
+						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>Jalgaon City.</span></li>
 						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+917031215642</li>
 					</ul>
 				</div>
 				<div class="col-md-3 w3_footer_grid">
@@ -1191,7 +1191,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-copy">
 			
 			<div class="container">
-				<p>© 2017 Super Market. All rights reserved | Design by <a href="file:///C:/Users/DELL/Downloads/super-market-responsive-bootstrap-e-commerce-template/index.html">Supermarket.com</a></p>
+				<p>© 2021 Super Market. All rights reserved | Design by <a href="file:///C:/Users/DELL/Downloads/super-market-responsive-bootstrap-e-commerce-template/index.html">Supermarket.com</a></p>
 			</div>
 		</div>
 		
